--- a/Arduino/ArduinoCode/ArduinoCode/Debug/Makefile
+++ b/Arduino/ArduinoCode/ArduinoCode/Debug/Makefile
@@ -42,6 +42,7 @@ C_SRCS +=  \
 ../bios_uart0.c \
 ../limit_switches.c \
 ../main.c \
+../position_control.c \
 ../stepper_motors.c
 
 
@@ -57,6 +58,7 @@ bios_timer_int.o \
 bios_uart0.o \
 limit_switches.o \
 main.o \
+position_control.o \
 stepper_motors.o
 
 OBJS_AS_ARGS +=  \
@@ -65,6 +67,7 @@ bios_timer_int.o \
 bios_uart0.o \
 limit_switches.o \
 main.o \
+position_control.o \
 stepper_motors.o
 
 C_DEPS +=  \
@@ -73,6 +76,7 @@ bios_timer_int.d \
 bios_uart0.d \
 limit_switches.d \
 main.d \
+position_control.d \
 stepper_motors.d
 
 C_DEPS_AS_ARGS +=  \
@@ -81,6 +85,7 @@ bios_timer_int.d \
 bios_uart0.d \
 limit_switches.d \
 main.d \
+position_control.d \
 stepper_motors.d
 
 OUTPUT_FILE_PATH +=ArduinoCode.elf
@@ -126,6 +131,13 @@ LINKER_SCRIPT_DEP+=
 	
 
 ./main.o: .././main.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./position_control.o: .././position_control.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
