First attempt at moving to specific spaces on the board

--- a/Arduino/ArduinoCode/ArduinoCode/Debug/Makefile
+++ b/Arduino/ArduinoCode/ArduinoCode/Debug/Makefile
@@ -44,6 +44,7 @@ C_SRCS +=  \
 ../commands.c \
 ../limit_switches.c \
 ../main.c \
+../piece_movement.c \
 ../position_control.c \
 ../stepper_motors.c
 
@@ -61,6 +62,7 @@ Bios/bios_uart0.o \
 commands.o \
 limit_switches.o \
 main.o \
+piece_movement.o \
 position_control.o \
 stepper_motors.o
 
@@ -71,6 +73,7 @@ Bios/bios_uart0.o \
 commands.o \
 limit_switches.o \
 main.o \
+piece_movement.o \
 position_control.o \
 stepper_motors.o
 
@@ -81,6 +84,7 @@ Bios/bios_uart0.d \
 commands.d \
 limit_switches.d \
 main.d \
+piece_movement.d \
 position_control.d \
 stepper_motors.d
 
@@ -91,6 +95,7 @@ Bios/bios_uart0.d \
 commands.d \
 limit_switches.d \
 main.d \
+piece_movement.d \
 position_control.d \
 stepper_motors.d
 
@@ -144,6 +149,13 @@ Bios/bios_uart0.o: ../Bios/bios_uart0.c
 	
 
 ./main.o: .././main.c
+	@echo Building file: $<
+	@echo Invoking: AVR/GNU C Compiler : 5.4.0
+	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
+	@echo Finished building: $<
+	
+
+./piece_movement.o: .././piece_movement.c
 	@echo Building file: $<
 	@echo Invoking: AVR/GNU C Compiler : 5.4.0
 	$(QUOTE)C:\Program Files (x86)\Atmel\Studio\7.0\toolchain\avr8\avr8-gnu-toolchain\bin\avr-gcc.exe$(QUOTE)  -x c -funsigned-char -funsigned-bitfields -DDEBUG  -I"C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\include"  -Og -ffunction-sections -fdata-sections -fpack-struct -fshort-enums -g2 -Wall -mmcu=atmega328p -B "C:\Program Files (x86)\Atmel\Studio\7.0\Packs\atmel\ATmega_DFP\1.7.374\gcc\dev\atmega328p" -c -std=gnu99 -MD -MP -MF "$(@:%.o=%.d)" -MT"$(@:%.o=%.d)" -MT"$(@:%.o=%.o)"   -o "$@" "$<" 
